@startuml

title __LAB ACTIVITY 4's Class Diagram__\n

  namespace  {
    class Hangman {
    }
  }
  

  namespace  {
    class HangmanCanvas {
    }
  }
  

  Hangman -up-|> acm.program.ConsoleProgram
  Hangman o-- HangmanCanvas : canvas
  HangmanCanvas -up-|> acm.graphics.GCanvas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
